<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HonDaCRM</string>
    <string name="news_app_bar_title">Новости</string>
    <string name="news_no_content">К сожалению, никаких новостей не найдено.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_image">image description</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Hide_dealer_list">Hide Dealer List</string>
    <string name="Book_a_service">Book a Service</string>
    <string name="working_time">Working Time: </string>
    <string name="tab_bottom_home">Home</string>
    <string name="tab_bottom_product">Products</string>
    <string name="tab_bottom_connect">Connected</string>
    <string name="tab_bottom_vehicle">Vehicles</string>
    <string name="tab_bottom_dealer">Dealers</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="tab_profile_info">My Info</string>
    <string name="tab_profile_follow">My Follow</string>
    <string name="tab_profile_event">My Events</string>
    <string name="Edit_User_Profile">Edit User Profile</string>
    <string name="User_Profile">User Profile</string>
    <string name="Profile_completeness">Profile completeness</string>
    <string-array name="menu_list">
        <item>F.A.Q</item>
        <item>Tutorials</item>
        <item>Privacy Policy</item>
        <item>Terms &amp; Conditions</item>
        <item>Change Language</item>
        <item>Rate our app</item>
        <item>Sign out</item>

    </string-array>
    <string-array name="list_time_expec">
        <item>"8:00 - 9:00"</item>
        <item>"9:00 - 10:00"</item>
        <item>"10:00 - 11:00"</item>
        <item>"11:00 - 12:00"</item>
        <item>"13:00 - 14:00"</item>
        <item>"14:00 - 15:00"</item>
        <item>"15:00 - 16:00"</item>
        <item>"16:00 - 17:00"</item>
    </string-array>
    <string name="msg_no_notes">No notes found!</string>
    <string name="lb_new_note_title">New Note</string>
    <string name="lb_edit_note_title">Edit Note</string>
    <string name="hint_enter_note">Enter your note!</string>
    <string name="lbs_sign_up_title">Sign up for Honda account</string>
    <string name="lb_sign_up_maximum">You have reached maximum number of retries.</string>
    <string name="msg_wrong_otp">Wrong OTP! Please try again</string>
    <string name="msg_wrong_valid_otp">“OTP must contains 6 characters”.</string>
    <string name="msg_wrong_otp_try_again">You have reached maximum number of retries.</string>
    <string name="msg_wrong_otp_exceeded_maxium">Wrong OTP! You have exceeded maximum number of retries. Please request a new OTP.</string>
    <string name="lb_try_again">Please try again the next day</string>
    <string name="title_forgot_password">Forgot password</string>
    <string name="resend_text">Did not receive OTP?</string>
    <string name="resend_text_2">Resend OTP</string>
    <string name="lb_note_time_slot">Note. Đây là thời gian dự kiến đến làm dịch vụ. Thời gian sửa chữa sẽ phụ thuộc vào kết quả kiểm tra xe của cố vấn</string>
    <string name="instruction_text">Please enter the mobile phone number you used to register your account. We will send an OTP to your registered mobile phone to let you change your password.</string>
    <string name="phone_number_text">Phone number (*) </string>
    <string name="phone_text_box">+84 </string>
    <string name="text_next">Next </string>
    <string name="instruction_text_otp">We are sending and OTP to validate your mobile phone number. Please enter OTP:</string>
    <string name="time_remaining">Time remaining:</string>
    <string name="hint_otp_enter">Enter OTP</string>
    <string name="button_verify">Verify</string>
    <string name="success_text">Thank you for validating your mobile phone!</string>
    <string name="lb_please_enter">Please enter your new password</string>
    <string name="lb_provide_info">Provide more information</string>
    <string name="lb_working_time">Working time:</string>
    <string name="lb_vehicle_picture">Tap to edit vehicle\'s picture</string>
    <string name="change_success_text">You have successfully changed your password!</string>
    <string name="change_password">Change password</string>
    <string name="conform_password">CONFIRM PASSWORD (*)</string>
    <string name="password">PASSWORD (*)</string>
    <string name="lb_gallery">Gallery</string>
    <string name="lb_camera">Camera</string>
    <string name="lb_unavailable">Unavailable</string>
    <string name="lb_available">Available</string>
    <string name="lb_time_slot_8h">08:00 - 09:00</string>
    <string name="lb_time_slot_9h">09:00 - 10:00</string>
    <string name="lb_time_slot_10h">10:00 - 11:00</string>
    <string name="lb_time_slot_11h">11:00 - 12:00</string>
    <string name="lb_time_slot_13h">13:00 - 14:00</string>
    <string name="lb_time_slot_14h">14:00 - 15:00</string>
    <string name="lb_time_slot_15h">15:00 - 16:00</string>
    <string name="lb_time_slot_16h">16:00 - 17:00</string>
    <string name="lb_sunday">SUN</string>
    <string name="lb_monday">MON</string>
    <string name="lb_tuesday">TUS</string>
    <string name="lb_wednesday">WED</string>
    <string name="lb_thursday">THU</string>
    <string name="lb_friday">FRI</string>
    <string name="lb_saturday">SAT</string>
    <string name="lb_select_vehicle">Select Vehicle</string>
    <string name="lb_select_dealer">Select Dealer</string>
    <string name="lb_time_slot">Select Time Slot</string>
    <string name="lb_select_service">Select Service</string>
    <string name="lb_submit_booking">Review Submit</string>
    <string name="lb_select_time_slot">Please select time slot in</string>
    <string name="lb_choose_action">Choose an action</string>
    <string name="validate_phone">Please input your phone number!</string>
    <string name="lb_step5_select_time">Selected Time</string>
    <string name="lb_step5_type_service">Select Type of Service</string>
    <string name="lb_step5_describe">Describe your request:</string>
    <string name="lb_step5_finishing_time">Expected finishing time: </string>
    <string-array name="tabs">
        <item>Products</item>
        <item>Vehicles</item>
        <item>Home</item>
        <item>Dealers</item>
        <item>Connected</item>
    </string-array>
    <string name="header_sign_up_content">Sign up for Honda account</string>
    <string name="label_name">Name (*)</string>
    <string name="label_phone_number">Phone number (*)</string>
    <string name="label_password">Password (*)</string>
    <string name="label_confirm_password">Confirm password (*)</string>
    <string name="label_gender">Gender</string>
    <string name="label_year_of_birth">Year of birth</string>
    <string name="label_email">Email</string>
    <string name="label_job">Job</string>
    <string name="label_id_number">ID number</string>
    <string name="label_address">Address</string>
    <string name="button_sign_up">SIGN UP</string>
    <string name="message_sending_otp">We are sending and OTP to validate your mobile phone number. Please enter the OTP:</string>
    <string name="message_time_remaining">Time remaining: 2:23</string>
    <string name="title_activity_policy">Policy</string>
    <string name="policy_content">The Honda Vietnam Company (“HVN,” “we” or “our”) cares about your privacy and the security of your information.\n
\n
1. What Personal Information Do We Gather About You?\n
\nWhen you use the NYT Services by, among other actions, ordering a subscription or other product, providing registration details, setting newsletter preferences, browsing our sites, completing a survey, entering a contest or otherwise interacting with our NYT Services, we gather personal information. Personal information is information that identifies you as an individual or relates to an identifiable individual. Several different types of personal information can be gathered when you interact with the NYT Services, depending on the type of product or service being used. Collection of personal information is necessary to delivering you the NYT Services or to enhance your customer experience.\n
\nIf you disclose any personal information relating to other people to us or to our service providers in connection with the NYT Services, you represent that you have the authority to do so and to permit us to use the information in accordance with this Privacy Policy.\n
\nWe and our service providers collect personal information in a variety of ways, including:</string>
    <string name="lb_sending_otp">We are sending and OTP to validate your mobile phone number. Please enter the OTP:</string>
    <string name="button_otp">VERIFY</string>
    <string name="lb_not_receive_otp">Did not receive OTP?</string>
    <string name="lb_resend_otp">Resend OTP</string>
    <string name="lb_time_remaining">Time remaining:</string>
    <string name="Invalid_email_address">“Email” has wrong format.</string>
    <string name="note">Note</string>
    <string name="support_name">Support</string>
    <string name="tutorials_name">Tutorials</string>
    <string name="privacypolicy_name">Privacy Policy</string>
    <string name="termsvconditions_name">Terms and Conditions</string>
    <string name="rateourapp_name">Rate our app</string>
    <string name="faq_name">F.A.Q</string>
    <string name="btn_next">Next</string>
    <string name="tv_change_success_text">You have successfully changed your password!</string>
    <string name="fragment_verify_vehicle_title">Please provide images:</string>
    <string name="vehicle_registration_certifcate">- Vehicle registration certificate <font fgcolor="#C61E24">(*)</font></string>
    <string name="vehicle_personal_identity_card">- Personal identity card</string>
    <string name="vehicle_invoice">- Vehicle invoice</string>
    <string name="field_required"><font fgcolor="#C61E24">(*)</font> There fields are required.</string>
    <string name="capture">Capture</string>
    <string name="send_request">Send Request</string>
    <string name="dialog_cancel">Cancel Current Booking</string>
    <string name="dialog_cancel_question">Are you sure you want to cancel this booking?</string>
    <string name="dialog_cancel_radio_4">Lý do khác: </string>
    <string name="dialog_revise_radio_1">Bận việc riêng</string>
    <string name="dialog_revise_radio_2">Quên không chú ý notification</string>
    <string name="dialog_revise_radio_3">Di chuyển nơi xa làm dịch vụ</string>
    <string name="btn_no">NO</string>
    <string name="btn_yes">YES</string>
    <string name="tv_filter_products">Filter Products</string>
    <string name="tv_Origin">Origin</string>
    <string name="chk_Imported">Imported</string>
    <string name="chk_Asembly">Asembly</string>
    <string name="tv_price_range">Price range</string>
    <string name="tv_from">Từ</string>
    <string name="tv_to">Đến</string>
    <string name="tv_Styling">Styling</string>
    <string name="chk_Sedan">Sedan</string>
    <string name="chk_SUV">SUV</string>
    <string name="chk_HatchBack">HatchBack</string>
    <string name="tv_Color">Color</string>
    <string name="chk_Red">Red</string>
    <string name="chk_Blue">Blue</string>
    <string name="chk_Green">Green</string>
    <string name="chk_White">White</string>
    <string name="chk_Yellow">Yellow</string>
    <string name="chk_Black">Black</string>
</resources>