<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/grp1">
        <item
            android:id="@+id/support"
            android:icon="@drawable/ic_support"
            android:title="@string/support_name" />
    </group>
    <group android:id="@+id/grp2">
        <!--<item android:id="@+id/userprofile" android:title="@string/userprofile_name" android:icon="@drawable/ic_favorite_border_black_24dp"/>-->
        <item
            android:id="@+id/faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/faq_name" />
    </group>
    <group android:id="@+id/grp3">
        <item
            android:id="@+id/tutorials"
            android:icon="@drawable/ic_tutorials"
            android:title="@string/tutorials_name" />
    </group>
    <group android:id="@+id/grp4">
        <item
            android:id="@+id/privacypolicy"
            android:icon="@drawable/ic_privacypolicy"
            android:title="@string/privacypolicy_name" />
    </group>
    <group android:id="@+id/grp5">
        <item
            android:id="@+id/termsvconditions"
            android:icon="@drawable/ic_terms"
            android:title="@string/termsvconditions_name" />
    </group>
    <group android:id="@+id/grp6">
        <!--<item android:id="@+id/appsettings" android:title="@string/appsettings_name" android:icon="@drawable/ic_favorite_border_black_24dp"/>-->
        <item
            android:id="@+id/rateourapp"
            android:icon="@drawable/ic_rateourapp"
            android:title="@string/rateourapp_name" />
    </group>
</menu>