<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <include layout="@layout/tool_bar_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_50">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_10"
            android:text="@string/tv_change_success_text"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_40"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_change_pass_success" />

        <Button
            android:id="@+id/btn_next_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_red_button"
            android:paddingHorizontal="@dimen/padding_50"
            android:text="@string/btn_next"
            android:textColor="#ffffff"
            android:textSize="@dimen/font_size_small_3" />
    </LinearLayout>
</LinearLayout>